phpBB 3.0.11, stil -> biçim

--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="tr" xml:lang="tr">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="author" content="phpBB Türkiye - www.phpbbturkiye.net" />
-<meta name="copyright" content="Canver Software - www.canversoft.net" />
+<meta name="author" content="phpBB Türkiye - phpbbturkiye.net" />
+<meta name="copyright" content="Canver Software - canversoft.net" />
 <meta name="description" content="phpBB Türkiye - phpBB3 Türkçe Dil Dosyası, phpBB3 Türkçe Dil Dosyası - kullanım ve yükleme kılavuzu" />
 <meta name="keywords" content="phpbb, phpbb3, türkçe, dil dosyası, phpBB3 Türkçe Dil Dosyası, phpBB3 Türkçe Dil Paketi, phpBB Türkiye" />
 <title>phpBB Türkiye - phpBB3 Türkçe Dil Dosyası - yükleme ve kullanım kılavuzu</title>
@@ -20,10 +20,10 @@
 			<center>
 				<h1>phpBB3 Türkçe Dil Dosyası</h1>
 				<h2>phpBB3 Türkçe Dil Dosyası Yükleme ve Kullanım Kılavuzu</h2>
-				Türkiye'nin phpBB topluluğu <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank"><strong>phpBB Türkiye</strong></a> tarafından phpBB3 için tercüme edilen ve geliştirilen <br />
+				Türkiye'nin phpBB topluluğu <a href="http://phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank"><strong>phpBB Türkiye</strong></a> tarafından phpBB3 için tercüme edilen ve geliştirilen <br />
 				<strong>phpBB3 Türkçe dil dosyası</strong>
 			</center>
-			<div class="note">Kurmadan ve sorularınızı iletmeden önce lütfen <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe dil dosyası</a> forumunu kontrol ediniz.</div>
+			<div class="note">Kurmadan ve sorularınızı iletmeden önce lütfen <a href="http://phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe dil dosyası</a> forumunu kontrol ediniz.</div>
 			
 			<!-- =============================================================================================== -->
 
@@ -39,18 +39,18 @@
 				<tr>
 					<td style="padding-left:10px;"><strong>Sürüm</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td>1.0.9 &nbsp; 04 Ocak 2012 &nbsp; ( phpBB 3.0.10 ) &nbsp; Unicode (UTF-8)</td>
+					<td>1.0.10 &nbsp; 27 Ağustos 2012 &nbsp; ( phpBB 3.0.11 ) &nbsp; Unicode (UTF-8)</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;" valign="top"><strong>Tercüme &amp; Telif</strong></td>
 					<td valign="top">&nbsp;:&nbsp;</td>
-					<td>&copy; <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - www.phpbbturkiye.net -  
-					&copy; <a href="http://www.canversoft.net" title="Canver Software Internet ve yazılım hizmetleri" target="_blank">Canver Software</a> - www.canversoft.net</td>
+					<td>&copy; <a href="http://phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - phpbbturkiye.net -  
+					&copy; <a href="http://canversoft.net" title="Canver Software Internet ve yazılım hizmetleri" target="_blank">Canver Software</a> - canversoft.net</td>
 				</tr>
 				<tr>
 					<td style="padding-left:10px;"><strong>Lisans</strong></td>
 					<td>&nbsp;:&nbsp;</td>
-					<td><a href="http://www.phpbbturkiye.net/hakkinda/gpl-lisansi.html" title="Genel Kamu Lisansı" target="_blank">Genel Kamu Lisansı (GPL)</a></td>
+					<td><a href="http://phpbbturkiye.net/hakkinda/gpl-lisansi.html" title="Genel Kamu Lisansı" target="_blank">Genel Kamu Lisansı (GPL)</a></td>
 				</tr>
 				</table><br />
 			</p>
@@ -67,7 +67,7 @@
 					<h4>phpBB3 Türkçe dil dosyası genel içeriği</h4>
 					<p>
 						<ul type="square" class="ul2">
-							<li>phpBB3 Türkçe dil dosyaları &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/phpbb3-turkce-dil-dosyasi-t72.html" target="_blank">bilgi</a> )</small></li>
+							<li>phpBB3 Türkçe dil dosyaları &nbsp; <small>( <a href="http://phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/phpbb3-turkce-dil-dosyasi-t72.html" target="_blank">bilgi</a> )</small></li>
 							<li>Kurulum lisansı "Türkçe GPL lisans metni"</li>				
 						</ul>
 					</p>
@@ -77,8 +77,8 @@
 					<h4>phpBB3 Türkçe dil dosyası grafik içeriği</h4>
 					<p>
 						<ul type="square" class="ul2">
-							<li>prosilver Türkçe butonlar &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb-grafik-f60/prosilver-turkce-butonlar-t95.html" target="_blank">bilgi</a> )</small></li>
-							<li>subsilver2 Türkçe butonlar &nbsp; <small>( <a href="http://www.phpbbturkiye.net/phpbb-grafik-f60/subsilver2-turkce-butonlar-t32.html" target="_blank">bilgi</a> )</small></li>
+							<li>prosilver Türkçe butonlar &nbsp; <small>( <a href="http://phpbbturkiye.net/phpbb-grafik-f60/prosilver-turkce-butonlar-t95.html" target="_blank">bilgi</a> )</small></li>
+							<li>subsilver2 Türkçe butonlar &nbsp; <small>( <a href="http://phpbbturkiye.net/phpbb-grafik-f60/subsilver2-turkce-butonlar-t32.html" target="_blank">bilgi</a> )</small></li>
 						</ul>
 					</p>
 				</td>
@@ -89,10 +89,10 @@
 			<h4>Paket hakkında</h4>	
 			
 			<ul type="square" class="ayrik">
-				<li>Bu paket; phpBB ve işlevselliği konusunda tecrübeli bir oluşum olan <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> grubu tarafından phpBB3 için tercüme edilen ve geliştirilen, yüksek kalite ve işlevsellik amaçlanan ve standart olarak UTF-8 formatında olan "<strong><a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a></strong>" 'dır.</li>
+				<li>Bu paket; phpBB ve işlevselliği konusunda tecrübeli bir oluşum olan <a href="http://phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> grubu tarafından phpBB3 için tercüme edilen ve geliştirilen, yüksek kalite ve işlevsellik amaçlanan ve standart olarak UTF-8 formatında olan "<strong><a href="http://phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a></strong>" 'dır.</li>
 				<li>Tercümede; görünüm, işlev, uyumluluk gibi bazı kriterlere göre sözlük tercümesinden farklı, daha uygun kelime ve cümleler kullanılmış, bazı kelimeler üzerinde günlerce tartışılmış, anlamı tamamlayıcı değişiklikler yapılmıştır.</li>
 				<li>Dosyalar, yeni phpBB3 sürümlerine, yamalara, hata ve geri bildirimlere göre sürekli güncellenmektedir.</li>
-				<li>phpBB3 Türkçe Dil Dosyası'nın son güncel sürümünü <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> sitemizin <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a> forumudan, eğer yüklediyseniz "<a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/dil-dosyasi-surum-denetimi-modulu-t14.html" target="_blank">Dil dosyası sürüm denetimi</a>" modülünden kontrol edebilirsiniz.</li>
+				<li>phpBB3 Türkçe Dil Dosyası'nın son güncel sürümünü <a href="http://phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> sitemizin <a href="http://phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dil Dosyası</a> forumudan, eğer yüklediyseniz "<a href="http://phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/dil-dosyasi-surum-denetimi-modulu-t14.html" target="_blank">Dil dosyası sürüm denetimi</a>" modülünden kontrol edebilirsiniz.</li>
 			</ul>
 			
 			<!-- [-] paket hakkında //-->
@@ -102,7 +102,7 @@
 			<!-- [+] kullanım & bulundurma koşulları //-->
 			<h3>Kullanım, bulundurma, beğişiklik koşulları</h3>
 
-			<p>"<strong>phpBB Türkiye</strong>" grubu tarafından tercümesi yapılan, geliştirilen ve dağıtıma sunulan bu dil dosyasını kullanabilmek için <a href="http://www.phpbbturkiye.net/sayfa-gpl-lisansi.html" target="_blank" rel="nofollow">GPL</a> lisansınında da yer alan koşullara ve özellikle aşağıdaki koşullara uymanız gerekmektedir. Dil dosyasını herhangi bir şekilde kullanmanız bu koşulları kabul ettiğiniz anlamına gelir.<br />
+			<p>"<strong>phpBB Türkiye</strong>" grubu tarafından tercümesi yapılan, geliştirilen ve dağıtıma sunulan bu dil dosyasını kullanabilmek için <a href="http://phpbbturkiye.net/sayfa-gpl-lisansi.html" target="_blank" rel="nofollow">GPL</a> lisansınında da yer alan koşullara ve özellikle aşağıdaki koşullara uymanız gerekmektedir. Dil dosyasını herhangi bir şekilde kullanmanız bu koşulları kabul ettiğiniz anlamına gelir.<br />
 
 			<h4>1. Kullanım ve değişiklik yapma ile ilgili koşullar</h4>
 			<ul type="square" class="ayrik">
@@ -180,7 +180,7 @@
 			</ul>
 
 			<h4>Hata ve geri bildirim</h4>
-			<p>Gözden kaçan hataları, yanlış olduğunu düşündüğünüz tercüme ve ifadeleri, tüm önerileri ve yorumlarınızı "<a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a>" sitemizdeki <a href="http://www.phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dosyası</a> forumuna, veya İngilizce arayüze sahip olan github üzerindeki projemizin <a href="https://github.com/angelside/phpBB3.Turkce.Dil.Dosyasi/issues" target="_blank">issues</a> alanına gönderebilirsiniz..</p>
+			<p>Gözden kaçan hataları, yanlış olduğunu düşündüğünüz tercüme ve ifadeleri, tüm önerileri ve yorumlarınızı "<a href="http://phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a>" sitemizdeki <a href="http://phpbbturkiye.net/phpbb3-turkce-dil-dosyasi-f84/" target="_blank">phpBB3 Türkçe Dosyası</a> forumuna, veya İngilizce arayüze sahip olan github üzerindeki projemizin <a href="https://github.com/angelside/phpBB3.Turkce.Dil.Dosyasi/issues" target="_blank">issues</a> alanına gönderebilirsiniz..</p>
 			<!-- [-] geliştirme //-->
 
 			<!-- =============================================================================================== -->
@@ -238,6 +238,7 @@
 			<p>Sürüm geçmişinin aşırı yer kaplamaması için bazı ara sürümler ve atlanmış, sadece son kullanıcıya sunulan ana dağıtımlara yer verilmiştir.</p> 
 			<p>
 				<ul type="square">
+					<li><strong>1.0.10</strong> &nbsp; &nbsp; ( 27.08.2012 ) - <strong>phpBB 3.0.11</strong> güncellemesi</li>
 					<li><strong>1.0.9</strong> &nbsp; &nbsp; ( 04.01.2012 ) - <strong>phpBB 3.0.10</strong> güncellemesi</li>
 					<li><strong>1.0.8</strong> &nbsp; &nbsp; ( 11.07.2011 ) - <strong>phpBB 3.0.9</strong> güncellemesi (3.0.9-RC3 ve 3.0.9-RC4 ile aynı)</li>
 					<li><strong>1.0.8</strong> &nbsp; &nbsp; ( 28.16.2011 ) - <strong>phpBB 3.0.9.RC4</strong> güncellemesi (3.0.9-RC3 ile aynı)</li>
