--- a/phpbb3.lang_turkish.guide.html
+++ b/phpbb3.lang_turkish.guide.html
@@ -309,7 +309,7 @@
 			
 			<div class="small" style="padding-bottom:10px;"><hr />
 				<span style="float:left;"></span>
-				<span style="float:right;">&copy; Copyright, <a href="http://www.phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - phpBB3 Türkçe destek ve geliştirme sitesi</span>
+				<span style="float:right;">&copy; Copyright, <a href="http://phpbbturkiye.net" title="phpBB3 Türkçe destek ve geliştirme sitesi" target="_blank">phpBB Türkiye</a> - phpBB3 Türkçe destek ve geliştirme sitesi</span>
 			</div>
 
 		</div>
